--- a/MiniApp/MiniApp/Dockerfile
+++ b/MiniApp/MiniApp/Dockerfile
@@ -1,21 +1,18 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["MiniApp/MiniApp.csproj", "MiniApp/"]
 RUN dotnet restore "MiniApp/MiniApp.csproj"
 COPY . .
 WORKDIR "/src/MiniApp"
-RUN dotnet build "./MiniApp.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "MiniApp.csproj" -c Release -o /app/build
 
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./MiniApp.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "MiniApp.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
